--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,3 +24,20 @@ jobs:
       - name: Run unit tests
         run: |
           go test ./... -v
+  build:
+    name: Build examples
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Set up toolchain
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.1
+        id: go
+
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Build examples
+        run: |
+          go build ./examples/example1
+          go build ./examples/example2
