--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,3 +24,21 @@ jobs:
       - name: Run unit tests
         run: |
           go test ./... -v
+
+  examples:
+    name: Run examples
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Set up toolchain
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.1
+        id: go
+
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Run unit tests
+        run: |
+          go run ./examples/example1/main.go
+          go run ./examples/example2/main.go
