--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - name: Run unit tests
+      - name: Run examples
         run: |
           go run ./examples/example1/main.go
           go run ./examples/example2/main.go
