--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - name: Run unit tests
-        run: |
-          go run ./examples/example1/main.go
-          go run ./examples/example2/main.go
+      - name: Run example1
+        run: go run ./examples/example1/main.go
+
+      - name: Run example2
+        run: go run ./examples/example2/main.go
