--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,3 +43,25 @@ jobs:
 
       - name: Run example2
         run: go run ./examples/example2/main.go
+
+      - name: Run example3
+        run: go run ./examples/example3/main.go
+
+  iata:
+    name: Test IATA generation
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Set up toolchain
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.1
+        id: go
+
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Generate IATA
+        run: time go run ./iata/generate/generate.go
+
+      - name: Check for changes
+        run: test -z "$(git status --porcelain)"
