Use protobuf to serialize url

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,3 +65,22 @@ jobs:
 
       - name: Check for changes
         run: test -z "$(git status --porcelain)"
+
+  proto:
+    name: Test proto generation
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Set up toolchain
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.1
+        id: go
+
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Generate proto
+        run: go generate ./...
+
+      - name: Check for changes
+        run: test -z "$(git status --porcelain)"
