--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,8 +81,7 @@ jobs:
 
       - name: Setup protocol buffer compiler
         run: |
-          sudo apt-get update
-          sudo apt-get install protoc
+          sudo apt-get install protobuf-compiler
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 
       - name: Generate proto
