Use protobuf to serialize URL (#22)
Google Flights uses protobuf to serialize the URL. Firstly, I did
serialization manually, but I think adding protobuf, even for a really
simple task, is the right approach. With this, it can be easily ported
to any language with a protocol buffer compiler.

The downside of this method is that the final binary will be ~4 MB
larger. (e.g. example3 binary 8 MB -> 12 MB).

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,4 +64,33 @@ jobs:
         run: time go run ./iata/generate/generate.go
 
       - name: Check for changes
-        run: test -z "$(git status --porcelain)"
+        run: git diff
+
+  proto:
+    name: Test proto generation
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Set up toolchain
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.1
+        id: go
+
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Setup protocol buffer compiler
+        run: |
+          sudo apt-get install protobuf-compiler
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+
+      - name: Generate proto
+        run: go generate ./...
+
+      - name: Check for changes
+        run: |
+          if [ ! -z "$(git status --porcelain)" ]
+          then
+            git diff
+            exit 1
+          fi
