Run CI every friday at 6AM and update readme (#23)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,14 @@ on:
       - '**'
     tags-ignore:
       - '**'
+  schedule:
+    - cron: '6 0 * * 5'
 
 jobs:
   unit_test:
     name: Run tests
     runs-on: ubuntu-22.04
+    timeout-minutes: 10
     steps:
       - name: Set up toolchain
         uses: actions/setup-go@v3
